--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -29,10 +29,11 @@ jobs:
         run: go build -v ./...
 
       - name: Test
-        run: go test -v ./...
+        run: go test -v -coverprofile=coverage.out ./...
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4.0.1
         with:
           fail_ci_if_error: true
+          file: ./coverage.out
           token: ${{ secrets.CODECOV_TOKEN }}
