--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -26,7 +26,7 @@ jobs:
         run: go get .
 
       - name: Build
-        run: go build -v ./...
+        run: make build
 
       - name: Test
         run: make test
